feat: migrate to Java 21 and Spring Boot 3.3.4