@@ -1,13 +1,8 @@
 package com.natura.web.server.security;
 
-import io.jsonwebtoken.Claims;
-import io.jsonwebtoken.ExpiredJwtException;
-import io.jsonwebtoken.Jwts;
-import io.jsonwebtoken.MalformedJwtException;
-import io.jsonwebtoken.SignatureAlgorithm;
-import io.jsonwebtoken.SignatureException;
-import io.jsonwebtoken.UnsupportedJwtException;
-
+import io.jsonwebtoken.*;
+import io.jsonwebtoken.io.Decoders;
+import io.jsonwebtoken.security.Keys;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.springframework.beans.factory.annotation.Value;
@@ -18,108 +13,102 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Component;
 
-import java.util.*;
-import java.util.stream.Collectors;
+import javax.crypto.SecretKey;
+import java.util.Date;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 @Component
 public class JwtTokenUtil {
 
+    public static final String CLAIM_AUTHORITIES = "authorities";
+    public static final String CLAIM_MAIL = "mail";
     @Value("${jwt.secret}")
     private String secret;
-    
+
     @Value("${jwt.token.expiration.ms}")
     private int expiration;
-    
-	protected final Log logger = LogFactory.getLog(getClass());
-    
+
+    protected final Log logger = LogFactory.getLog(getClass());
+
+    private SecretKey getSigningKey() {
+        byte[] keyBytes = Decoders.BASE64.decode(this.secret);
+        return Keys.hmacShaKeyFor(keyBytes);
+    }
+
     public String generateToken(Authentication authentication) {
         if (authentication == null)
             throw new InsufficientAuthenticationException("Null authentication.");
 
-        if (authentication.getPrincipal() != null && authentication.getPrincipal() instanceof AppUserDetails) {
-            AppUserDetails userPrincipal = (AppUserDetails) authentication.getPrincipal();
-
+        if (authentication.getPrincipal() instanceof AppUserDetails userPrincipal) {
             Claims claims = generateClaimsForUser(userPrincipal);
 
             Date now = new Date();
             Date expiryDate = new Date(now.getTime() + expiration);
 
             return Jwts.builder()
-                    .setSubject(userPrincipal.getUsername())
-                    .setClaims(claims)
-                    .setIssuedAt(new Date())
-                    .setExpiration(expiryDate)
-                    .signWith(SignatureAlgorithm.HS512, secret)
-                    .compact();
+                .subject(userPrincipal.getUsername())
+                .claims(claims)
+                .issuedAt(new Date())
+                .expiration(expiryDate)
+                .signWith(getSigningKey())
+                .compact();
         } else {
             throw new InsufficientAuthenticationException("Principal does not instance of AppUserDetails.");
         }
     }
-    
-    private Claims generateClaimsForUser(AppUserDetails user) {
-    	
-    	Map<String, Object> info =  new HashMap<String, Object>();
-    	info.put("mail", user.getEmail());
-        info.put("authorities", user.getAuthorities().stream()
-                                        .map(GrantedAuthority::getAuthority)
-                                        .collect(Collectors.toList()));
-    	
-    	Claims claims = Jwts.claims().setSubject(user.getUsername());
-    	claims.putAll(info);
 
-        return claims;
+    private Claims generateClaimsForUser(AppUserDetails user) {
+        Map<String, Object> info = new HashMap<>();
+        info.put(CLAIM_MAIL, user.getEmail());
+        info.put(CLAIM_AUTHORITIES, user.getAuthorities().stream()
+            .map(GrantedAuthority::getAuthority)
+            .toList());
+        return Jwts.claims().subject(user.getUsername()).add(info).build();
     }
-    
+
     public Claims getAllClaimsFromToken(String token) {
         return Jwts.parser()
-                .setSigningKey(secret)
-                .parseClaimsJws(token)
-                .getBody();
+            .verifyWith(getSigningKey())
+            .build()
+            .parseSignedClaims(token)
+            .getPayload();
     }
-    
-    public String getUsernameFromJWT(String token) {
-        Claims claims = Jwts.parser()
-                .setSigningKey(secret)
-                .parseClaimsJws(token)
-                .getBody();
 
-        return claims.getSubject();
+    public String getUsernameFromJWT(String token) {
+        return getAllClaimsFromToken(token).getSubject();
     }
-    
+
     public boolean validateToken(String authToken) {
         try {
-            Jwts.parser().setSigningKey(secret).parseClaimsJws(authToken);
+            Jwts.parser().verifyWith(getSigningKey()).build().parseSignedClaims(authToken);
             return true;
-        } catch (SignatureException ex) {
-            logger.error("Invalid JWT signature");
         } catch (MalformedJwtException ex) {
-        	logger.error("Invalid JWT token");
+            logger.error("Invalid JWT token");
         } catch (ExpiredJwtException ex) {
-        	logger.error("Expired JWT token");
+            logger.error("Expired JWT token");
         } catch (UnsupportedJwtException ex) {
-        	logger.error("Unsupported JWT token");
+            logger.error("Unsupported JWT token");
         } catch (IllegalArgumentException ex) {
-        	logger.error("JWT claims string is empty.");
+            logger.error("JWT claims string is empty.");
         }
         return false;
     }
 
-	public UserDetails generateFromJWT(String jwtToken) {
+    public UserDetails generateFromJWT(String jwtToken) {
         String username = getUsernameFromJWT(jwtToken);
         Claims claims = getAllClaimsFromToken(jwtToken);
         AppUserDetails.AppUserBuilder builder = AppUserDetails.userBuilder();
         builder.username(username);
-        builder.email((String) claims.get("mail"));
-
-        if (claims.get("authorities") != null) {
-            List<GrantedAuthority> authorities = (List<GrantedAuthority>) claims.get("authorities", List.class)
-                    .stream()
-                    .map(authority -> new SimpleGrantedAuthority(authority.toString()))
-                    .collect(Collectors.toList());
+        builder.email((String) claims.get(CLAIM_MAIL));
+        if (claims.get(CLAIM_AUTHORITIES) != null) {
+            List<GrantedAuthority> authorities = claims.get(CLAIM_AUTHORITIES, List.class)
+                .stream()
+                .map(authority -> new SimpleGrantedAuthority(authority.toString()))
+                .toList();
             builder.authorities(authorities);
         }
-
-        UserDetails details = builder.build();
-        return details;
-	}
+        return builder.build();
+    }
 }
